--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 .login-form {
     margin: 5%;
 }
-#inputName, #inputPassword, #inputEmail, #inputEmailRepeat, #inputCity, #{
+#inputName, #inputPassword, #inputEmail, #inputEmailRepeat, #inputCity, #inputLName, #inputPhone{
     border-radius: 0px;
     height: 45px;
     font-size: 16px;
